# DIY-AR-Glasses

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ar.service  main.cpp  start.sh
hardware/fusion360/: ARGlass.f3d
hardware/kicad/: ARGlassBoard.kicad_pcb  ARGlassBoard.kicad_pro  ARGlassBoard.kicad_sch
include/: App.h  App3D.h  CalibrationApp.h  HMC5883L.h  I2C.h  MPU6050.h  MadgwickFilter.h  MenuApp.h  OpticalParams.h  Test3DApp.h  constants.h  utils.h
shaders/: distortion.frag
src/: App.cpp  App3D.cpp  CalibrationApp.cpp  HMC5883L.cpp  I2C.cpp  MPU6050.cpp  MadgwickFilter.cpp  MenuApp.cpp  Test3DApp.cpp  calibrate_accel.cpp  calibrate_mag.cpp  main.cpp
